--- a/ProyectoAppMoviles2/Vistas/Base.lproj/LaunchScreen.storyboard
+++ b/ProyectoAppMoviles2/Vistas/Base.lproj/LaunchScreen.storyboard
@@ -14,13 +14,54 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="globo" translatesAutoresizingMaskIntoConstraints="NO" id="3Ne-jk-Lnh">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WORLD FLAGS" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cnH-Nv-LAj">
+                                <rect key="frame" x="50" y="611" width="275" height="36"/>
+                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="30"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CONOCE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="77d-xt-0pf">
+                                <rect key="frame" x="50" y="570" width="275" height="33"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="27"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Conoce al mundo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="84g-Wq-rmn">
+                                <rect key="frame" x="24" y="49" width="335" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="84g-Wq-rmn" secondAttribute="trailing" constant="20" id="Dup-ti-qkc"/>
+                            <constraint firstItem="3Ne-jk-Lnh" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="EdH-UQ-uzX"/>
+                            <constraint firstItem="84g-Wq-rmn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="IFm-XV-5Ir"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="3Ne-jk-Lnh" secondAttribute="bottom" id="KrF-9M-t1u"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="cnH-Nv-LAj" secondAttribute="bottom" constant="20" id="Nzj-VW-ajp"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cnH-Nv-LAj" secondAttribute="trailing" constant="50" id="Oeo-lL-ywF"/>
+                            <constraint firstItem="3Ne-jk-Lnh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="WCy-6v-brk"/>
+                            <constraint firstItem="77d-xt-0pf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="bkz-qx-h5c"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="3Ne-jk-Lnh" secondAttribute="trailing" id="cho-rC-Ih5"/>
+                            <constraint firstItem="cnH-Nv-LAj" firstAttribute="top" secondItem="77d-xt-0pf" secondAttribute="bottom" constant="8" id="d8d-yP-oPq"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="77d-xt-0pf" secondAttribute="trailing" constant="50" id="fx4-sj-5Cx"/>
+                            <constraint firstItem="cnH-Nv-LAj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="hJq-8R-fMg"/>
+                            <constraint firstItem="84g-Wq-rmn" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="vCS-Do-eMt"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="globo" width="500" height="750"/>
+    </resources>
 </document>
