--- a/ProyectoAppMoviles2/Vistas/Base.lproj/Main.storyboard
+++ b/ProyectoAppMoviles2/Vistas/Base.lproj/Main.storyboard
@@ -889,16 +889,16 @@
                                 <rect key="frame" x="20" y="335" width="335" height="172"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Zoj-9V-Kon">
-                                        <rect key="frame" x="0.0" y="0.0" width="156.5" height="172"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="163" height="172"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Continente" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NGa-T2-epA">
-                                                <rect key="frame" x="27.5" y="0.0" width="102" height="24"/>
+                                                <rect key="frame" x="30.5" y="0.0" width="102" height="24"/>
                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                                 <color key="textColor" red="0.41607962059999998" green="0.40832417589999997" blue="0.99719078149999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="S3o-3I-sDK">
-                                                <rect key="frame" x="15.5" y="44" width="126" height="128"/>
+                                                <rect key="frame" x="18.5" y="44" width="126" height="128"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="128" id="u2Y-50-vLC"/>
                                                 </constraints>
@@ -906,35 +906,35 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="LR1-7h-wht">
-                                        <rect key="frame" x="166.5" y="0.0" width="168.5" height="172"/>
+                                        <rect key="frame" x="173" y="0.0" width="162" height="172"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Moneda" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fLu-j9-LYH">
-                                                <rect key="frame" x="46" y="0.0" width="76.5" height="44.5"/>
+                                                <rect key="frame" x="43" y="0.0" width="76.5" height="55"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                 <color key="textColor" red="0.41607962059999998" green="0.40832417589999997" blue="0.99719078149999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" alignment="bottom" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="X9O-Ez-6re">
-                                                <rect key="frame" x="20" y="64.5" width="128.5" height="107.5"/>
+                                                <rect key="frame" x="20" y="75" width="122" height="97"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Mexican Peso" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pCI-Hc-UGz">
-                                                        <rect key="frame" x="0.0" y="0.0" width="128.5" height="20.5"/>
-                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="122" height="18"/>
+                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                                         <color key="textColor" red="0.41607962059999998" green="0.40832417589999997" blue="0.99719078149999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="35" translatesAutoresizingMaskIntoConstraints="NO" id="akX-kh-zdG">
-                                                        <rect key="frame" x="0.0" y="40.5" width="128.5" height="23"/>
+                                                        <rect key="frame" x="0.0" y="38" width="122" height="19.5"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Codigo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h46-ZT-qcS">
-                                                                <rect key="frame" x="0.0" y="0.0" width="49" height="23"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="49" height="19.5"/>
                                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                                                 <color key="textColor" red="0.41607962059999998" green="0.40832417589999997" blue="0.99719078149999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MXN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W67-Yg-fk2">
-                                                                <rect key="frame" x="84" y="0.0" width="44.5" height="23"/>
-                                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                                                <rect key="frame" x="84" y="0.0" width="38" height="19.5"/>
+                                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                                                 <color key="textColor" red="0.41607962059999998" green="0.40832417589999997" blue="0.99719078149999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
@@ -944,17 +944,17 @@
                                                         </constraints>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="48" translatesAutoresizingMaskIntoConstraints="NO" id="zFO-dn-edk">
-                                                        <rect key="frame" x="0.0" y="83.5" width="128.5" height="24"/>
+                                                        <rect key="frame" x="0.0" y="77.5" width="122" height="19.5"/>
                                                         <subviews>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Simbolo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KbN-cA-yQf">
-                                                                <rect key="frame" x="0.0" y="0.0" width="67" height="24"/>
-                                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Simbolo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KbN-cA-yQf">
+                                                                <rect key="frame" x="0.0" y="0.0" width="56" height="19.5"/>
+                                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                                                 <color key="textColor" red="0.41607962059999998" green="0.40832417589999997" blue="0.99719078149999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f1k-t5-yHQ">
-                                                                <rect key="frame" x="115" y="0.0" width="13.5" height="24"/>
-                                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="$" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f1k-t5-yHQ">
+                                                                <rect key="frame" x="104" y="0.0" width="18" height="19.5"/>
+                                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                                                 <color key="textColor" red="0.41607962059999998" green="0.40832417589999997" blue="0.99719078149999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
@@ -1078,6 +1078,6 @@
         <image name="person.fill" catalog="system" width="64" height="60"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="a8j-fV-tyn"/>
+        <segue reference="9Au-tE-FFW"/>
     </inferredMetricsTieBreakers>
 </document>
